# metachat

./: .gitignore  Cargo.toml  README.md  package-lock.json
chatApp/: angular.json  capacitor.config.json  capacitor.config.ts  config.xml  ionic.config.json  package-lock.json  package.json
chatApp/src/: index.html
chatApp/src/app/: app.module.ts
chatApp/src/app/tab1/: tab1.page.html  tab1.page.ts
chatApp/src/pages/chat-room/: chat-room.html  chat-room.module.ts  chat-room.ts
chatApp/src/pages/chatting/: chatting.html  chatting.module.ts  chatting.ts
chatApp/src/pages/home/: home.html  home.ts
chatApp/src/providers/chat/: chat.ts
chatApp/src/providers/websocket/: websocket.ts
chatApp_socketIO/: capacitor.config.json  package-lock.json  package.json
chatApp_socketIO/src/app/: app.module.ts
chatApp_socketIO/src/app/list/: list.page.html  list.page.scss  list.page.ts
chatApp_socketIO/src/app/services/: chat.service.ts
rustServer/: Cargo.toml
rustServer/src/: main.rs
