[package]
name = "rustServer"
version = "0.1.0"
authors = ["amargarido"]

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
rand = "*"
bytes = "0.4"
byteorder = "1.1"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
env_logger = "*"

serde = "1.0.60"
serde_json = "1.0"
serde_derive = "1.0"

actix = "0.7"
actix-web = "0.7"

[dev-dependencies]
#compiletest_rs = "0.3"
#serde_bytes = "0.10"

